Make the block partial dropdown use the same styling as other CMS edit dropdowns; make that styling work correctly with z-index

--- a/app/javascript/styles/_page_admin_dropdown.scss
+++ b/app/javascript/styles/_page_admin_dropdown.scss
@@ -3,6 +3,8 @@
 .page-admin-dropdown {
   margin-bottom: 4px;
   float: right;
+  z-index: $zindex-dropdown;
+  position: relative;
 
   @media (min-width: #{breakpoint-min(lg, $grid-breakpoints) + 65px}) and (max-width: #{breakpoint-max(lg, $grid-breakpoints)}) {
     position: absolute;
